--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -9,7 +9,7 @@
 <ion-content>
   <ion-list>
     <ion-item>
-      <div *ngFor="let json of datajson">
+      <div *ngFor="let json of datarparsed">
         <ion-card>
           <ion-item>
             <ion-avatar item-left>
